--- a/Healthcare020.Mobile/Healthcare020.Mobile/Views/SettingsPage.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Views/SettingsPage.xaml
@@ -58,7 +58,8 @@
                             <Button x:Name="EditProfileBtn"
                                     Style="{StaticResource CustomButtonStyle}"
                                     Text="Edit profile"
-                                    Command="{Binding EditProfileNavigationCommand}">
+                                    Command="{Binding EditProfileNavigationCommand}"
+                                    Clicked="EditProfileBtn_OnClicked">
                             </Button>
                             <Button x:Name="ChangePasswordBtn"
                                     Text="Change password"
