--- a/Healthcare020.Mobile/Healthcare020.Mobile/Views/RegisterPage.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Views/RegisterPage.xaml
@@ -8,58 +8,42 @@
              mc:Ignorable="d"
              x:Class="Healthcare020.Mobile.Views.RegisterPage">
     <ContentPage.Content>
-        <Grid BackgroundColor="{StaticResource LighterSmokeWhite}">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="2*"></RowDefinition>
-            </Grid.RowDefinitions>
-            <StackLayout Grid.Row="0" Margin="0">
-                <Grid VerticalOptions="FillAndExpand">
-                    <Path Style="{StaticResource LogoPath}"></Path>
-                    <Image  Source="{StaticResource Logo_Revert}"
-                    Margin="5,0,0,0"
-                   Aspect="AspectFit"
-                   HorizontalOptions="End"
-                   VerticalOptions="Start"></Image>
-                </Grid>
-                <StackLayout Orientation="Horizontal" HorizontalOptions="Start" VerticalOptions="End" >
-                    <Path x:Name="TitlePath" Style="{StaticResource TitlePath}"></Path>
-                    <Label x:Name="TitleLabel" Style="{StaticResource TitleLabel}"></Label>
+        <ScrollView>
+            <Grid BackgroundColor="{StaticResource LighterSmokeWhite}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="2*"></RowDefinition>
+                </Grid.RowDefinitions>
+                <StackLayout Grid.Row="0" Margin="0" Orientation="Horizontal">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <StackLayout Style="{StaticResource TitleLabelStackStyle}">
+                            <Path x:Name="TitlePath" Style="{StaticResource TitlePath}"></Path>
+                            <Label x:Name="TitleLabel" Style="{StaticResource TitleLabel}"></Label>
+                        </StackLayout>
+                        <Grid VerticalOptions="FillAndExpand">
+                            <Path Style="{StaticResource LogoPath}"></Path>
+                            <Image Style="{StaticResource LogoImage}"></Image>
+                        </Grid>
+                    </Grid>
                 </StackLayout>
-            </StackLayout>
-            <StackLayout Grid.Row="1" Margin="10,10,10,20"
-                         VerticalOptions="FillAndExpand"
-                         BackgroundColor="{StaticResource LighterSmokeWhite}">
+                <StackLayout Grid.Row="1" Style="{StaticResource RegisterFormStackBody}">
+                    <StackLayout.Resources>
+                        <Style TargetType="Entry" BasedOn="{StaticResource CustomEntry}"></Style>
+                    </StackLayout.Resources>
+                    <Entry Placeholder="Broj zdravstvene knjižice *"></Entry>
+                    <Entry Placeholder="Ime *"></Entry>
+                    <Entry Placeholder="Prezime *"></Entry>
+                    <Entry Placeholder="Username *"></Entry>
+                    <Entry Placeholder="Password *"></Entry>
+                    <Entry Placeholder="Confirm password *"></Entry>
 
-                <Label Text="Registracija"
-                       HorizontalOptions="CenterAndExpand"
-                       TextColor="{StaticResource CustomBlue}"
-                       FontSize="{StaticResource FontSize-Medium}"
-                       FontFamily="{StaticResource Montserrat-Medium}"></Label>
-                <StackLayout Margin="70,0,70,0">
-                    <BoxView HeightRequest="0.1" Margin="0,15,0,15"
-                             HorizontalOptions="CenterAndExpand"
-                             WidthRequest="300"
-                             Color="Black"></BoxView>
-                        <Label  Text="Broj knjizice"></Label>
-                        <Entry  HorizontalOptions="FillAndExpand" ></Entry>
-                        <Label  Text="Ime"></Label>
-                        <Entry  HorizontalOptions="FillAndExpand" ></Entry>
-                        <Label Text="Prezime"></Label>
-                        <Entry HorizontalOptions="FillAndExpand" ></Entry>
-                        <Label Text="Username"></Label>
-                        <Entry HorizontalOptions="FillAndExpand" ></Entry>
-                        <Label Text="Password"></Label>
-                        <Entry HorizontalOptions="FillAndExpand" ></Entry>
-                        <Label Text="ConfirmPassword"></Label>
-                        <Entry HorizontalOptions="FillAndExpand" ></Entry>
-                        <Button CornerRadius="15"
-                            Margin="0,10"
-                            BackgroundColor="{StaticResource CustomBlue}"
-                            Text="Register"
-                            TextColor="WhiteSmoke"></Button>
+                    <Button Style="{StaticResource BigButtonStyle}"
+                            Text="Register"></Button>
                 </StackLayout>
-            </StackLayout>
-        </Grid>
+            </Grid>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
