--- a/Healthcare020.Mobile/Healthcare020.Mobile/Resources/SmallDevicesStyle.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Resources/SmallDevicesStyle.xaml
@@ -3,6 +3,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                     x:Class="Healthcare020.Mobile.Resources.SmallDevicesStyle">
 
+    <!--#region RegisterPage style-->
 
     <!--Path with Logo-->
     <Style TargetType="Path" x:Key="LogoPath">
@@ -48,7 +49,6 @@
     </Style>
     <!--/Path with Label-->
 
-    <!--Register form styles-->
     <Style TargetType="StackLayout" x:Key="RegisterFormStackBody">
         <Setter Property="VerticalOptions" Value="FillAndExpand" />
         <Setter Property="BackgroundColor" Value="{StaticResource LighterSmokeWhite}" />
@@ -61,13 +61,10 @@
         <Setter Property="TextColor" Value="Black"></Setter>
         <Setter Property="Margin" Value="5"></Setter>
     </Style>
-    <!--/Register form styles-->
 
-    <OnPlatform x:TypeArguments="ImageSource" x:Key="Logo">
-        <On Platform="Android" Value="healthcare020_200x200.png"></On>
-        <On Platform="UWP" Value="Assets/healthcare020_200x200.png"></On>
-    </OnPlatform>
+    <!--#endregion-->
 
+    <!--#region General styles-->
 
     <Style TargetType="Button" x:Key="CustomButtonStyle">
         <Setter Property="ContentLayout">Left,0</Setter>
@@ -87,5 +84,19 @@
         <Setter Property="TextColor" Value="{StaticResource CustomDarkBlue}"></Setter>
     </Style>
 
+    <OnPlatform x:TypeArguments="ImageSource" x:Key="Logo">
+        <On Platform="Android" Value="healthcare020_200x200.png"></On>
+        <On Platform="UWP" Value="Assets/healthcare020_200x200.png"></On>
+    </OnPlatform>
+    <!--#endregion-->
+
+    <!--#region WelcomePage styles-->
+    <Style TargetType="Path" x:Key="WelcomePageLogoPath">
+        <Setter Property="Data">M364 0C364 34.275 359.292 68.2144 350.146 99.8804C341 131.546 327.594 160.319 310.693 184.555C293.793 208.791 273.73 228.016 251.648 241.133C229.567 254.249 205.901 261 182 261C158.099 261 134.433 254.249 112.352 241.133C90.2703 228.016 70.2068 208.791 53.3066 184.555C36.4063 160.319 23.0003 131.546 13.8539 99.8804C4.70756 68.2144 -2.08945e-06 34.275 0 -2.28173e-05L182 0H364Z</Setter>
+        <Setter Property="Aspect" Value="Uniform"></Setter>
+        <Setter Property="HeightRequest">190</Setter>
+    </Style>
+
+    <!--#endregion-->
 
 </ResourceDictionary>
